--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
     {"@type":"HowToStep","name":"Finish the Course","text":"Reach the end to clear a level; retry instantly on crash."}
   ],"tool":[{"@type":"HowToTool","name":"Keyboard or touch controls"}]}
   </script>
+  <meta name="google-site-verification" content="jqoVmdvpFeSqcY9PkV0LR-CD1VGjytYhpgvNFHGI4Eo" />
 </head>
 
 <body>
