--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
   ],"tool":[{"@type":"HowToTool","name":"Keyboard or touch controls"}]}
   </script>
   <meta name="google-site-verification" content="jqoVmdvpFeSqcY9PkV0LR-CD1VGjytYhpgvNFHGI4Eo" />
+  <meta name="msvalidate.01" content="D51A929F3F31BB574A9F55650F213E64" />
 </head>
 
 <body>
