--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Space Waves Unblocked — Play Online for Free (No Download) | Space-Waves-Unblocked</title>
+  <title>Space Waves Unblocked</title>
   <meta name="description" content="Play Space Waves Unblocked in your browser, free and fullscreen. No downloads. Includes tips, controls, FAQs, and official download links for Android & iOS." />
   <meta name="keywords" content="Space Waves Unblocked, play Space Waves online, Space Waves browser, Space Waves game, unblocked games, arcade avoider, reflex game" />
   <link rel="canonical" href="https://space-waves-unblocked.github.io/" />
